# spartan-ecdsa

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.json  Cargo.toml  README.md  membership.r1cs  package.json  rust-toolchain
.cargo/: config
.github/workflows/: publish.yaml
browser_benchmark/: next.config.js  package.json
browser_benchmark/lib/prover/: groth16.ts  prover.ts  spartan.ts
browser_benchmark/lib/spartanProver/: spartanProver.ts
browser_benchmark/pages/: index.tsx
browser_benchmark/public/: g16_poseidon.wasm  poseidon.wasm  spartan_poseidon.wasm
circuits/: package.json  scalar_mult.circom  scalar_mult.r1cs
circuits/big_mult_mod/: big_mul_mod.circom
circuits/ecdsa_membership/: ecdsa.circom  membership.circom
circuits/ecdsa_membership/secp256k1/: add.circom  double.circom  mul.circom
circuits/eff_ecdsa_membership/: membership.circom  tree.circom
circuits/instances/: eff_ecdsa.circom
circuits/poseidon/: poseidon.circom  poseidon256.circom  poseidon5.circom
circuits/scalar_mult_js/: scalar_mult.wasm
circuits/tests/: ecdsa.test.ts  eff_ecdsa.test.ts  membership.test.ts  secp256k1.test.ts  test_utils.ts
circuits/tests/circuits/: add_test.circom  double_test.circom  ecdsa_test.circom  mul_test.circom
scripts/: addr_membership_circuit.sh  build.sh  build_wasm.sh  compile_circuit.sh  eddsa_circuit.sh  eff_ecdsa_circuit.sh  eff_ecdsa_to_addr_circuit.sh  g16_poseidon.sh  membership_circuit.sh  poseidon_circuit.sh  pubkey_membership_circuit.sh  spartan_poseidon.sh  test.sh
src/: lib.rs  wasm.rs
src/circuits/: ecdsa_membership.rs  mod.rs  utils.rs
