[package]
name = "spartan-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "spartan_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = { path = "../spartan-dan"}
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
merlin = "3.0.0"
web-sys = { version = "0.3.60", features = ["console"] }
serde_json = "1.0.89"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-rayon = { version = "1.0"}

[dependencies.getrandom]
features = ["js"]
