[package]
name = "spartan-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "spartan_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = { git = "https://github.com/DanTehrani/Spartan.git", branch="master" }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
merlin = "3.0.0"
web-sys = { version = "0.3.60", features = ["console"] }
serde_json = "1.0.89"
libsecp256k1 = "0.7.1"
num-bigint = "0.4.3"
serde = "1.0.151"
byteorder = "1.4.3"
ff = "0.12.0"
pasta_curves = "0.4.0"
serde-wasm-bindgen = "0.4.5"
bincode = "1.3.3"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
nova-scotia = { git = "https://github.com/nalinbhardwaj/Nova-Scotia.git" }
nova-snark = "0.9.0"
ff = "0.12.1"
ark-std = { version = "0.3.0", features = ["print-trace"] }

[dependencies.getrandom]
features = ["js"]


[[bin]]
name = "gen_spartan_inst"
path = "src/bin/gen_spartan_inst.rs"
